cmake_minimum_required(VERSION 3.25.1)
project(hangmanC)
SET(requiredlibs)
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    SET(requiredlibs ${requiredlibs} ${CURL_LIBRARIES})
ELSE(CURL_FOUND)
    MESSAGE(FATAL_ERROR "Could not find the CURL library and development files.")
ENDIF(CURL_FOUND)
add_executable(hangmanC src/main.c src/printHangman.c src/network.c)
TARGET_LINK_LIBRARIES(hangmanC ${requiredlibs})

